fix getExample() 2.7.2